--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,10 +1,16 @@
-<div class="row mb40">
+<div class="row">
   <div class="small-12 columns">
     <%= link_to t('backend.back'), organizations_path , class: "button tiny radius" %>
     <h2 class="post__title-big"><%= @organization.name %></h2>
+    <%# if @organization.invalidate %>
+      <!-- invalidate -->
+    <%# end %>
+    <p>
+      <strong><%= t('organizations.show.state') %>:</strong>
+      <%= organization_status %>
+    </p>
   </div>
 </div>
-
 <div class="small-12 columns">
     <ul class="accordion" data-accordion role = "tablist">
       <li class="accordion-navigation">
@@ -26,7 +32,11 @@
             <strong><%= t('organizations.show.canceled_at') %>:
             <br />
             </strong>
-            <%= @organization.canceled_at.strftime("%d/%m/%Y") %>
+
+            <% if @organization.canceled_at? %>
+              <%= @organization.canceled_at.strftime("%d/%m/%Y") %>
+            <% end %>
+
           </p>
 
           <p>
