--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -7329,10 +7329,10 @@ ul.accordion{
   .accordion-title{
     position: relative;
     display: block;
-    padding: 1.25rem 1rem;
     border: 1px solid #e6e6e6;
   }
   .accordion-navigation{
+
     .content {
       display: none;
       padding: 1rem;
@@ -7341,8 +7341,21 @@ ul.accordion{
       background-color: #fefefe;
       color: #0a0a0a;
       ul{
-      margin-left: 0; 
+      margin-left: 0;
       }
     }
+  }
+
+  .accordion-icon{
+    float: right;
+    color: #0077b9;
+    margin-right: 1rem;
+  }
+  .accordion-icon:before {
+    content: "+";
+    position: absolute;
+  }
+  .active .accordion-icon:before {
+    content: "-";
   }
 }
