--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -8,7 +8,7 @@
     <thead>
       <tr>
         <th><%= t('backend.date')%></th>
-        <th><%= t('backend.event')%></th>
+        <th><%= t('backend.event.title')%></th>
         <th><%= t('backend.holder')%></th>
         <th><%= t('backend.actions')%></th>
       </tr>
@@ -16,7 +16,7 @@
     <tfoot>
       <tr>
         <th><%= t('backend.date')%></th>
-        <th><%= t('backend.event')%></th>
+        <th><%= t('backend.event.title')%></th>
         <th><%= t('backend.holder')%></th>
         <th><%= t('backend.actions')%></th>
       </tr>
