--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,9 +1,9 @@
 <%= render 'search_form' %>
-<div class="row">
+<div class="small-12 columns">
   <%= page_entries_info @events %>
   <%= paginate @events %>
 </div>
-<div class="row">
+<div class="small-12 colum">
   <table class="event">
     <thead>
       <tr>
