--- a/app/views/events/_search_form.html.erb
+++ b/app/views/events/_search_form.html.erb
@@ -1,36 +1,38 @@
 <% if current_user.admin? || current_user.lobby? %>
+  <div class="row">
+    <div class="small-6 medium-8 column">
+      <h1>Eventos</h1>
+    </div>
+    <div class="small-6 medium-4 column">
+      <%= link_to t('backend.new_event'),
+                  new_event_path,
+                  :class => "button radius warning right" if can? :create, Event %>
+    </div>
+  </div>
+  <hr />
+
   <%= form_tag events_path, method: :get do %>
-  <div class="small-12 columns" id="search_form">
-    <div class="small-4 columns">
-      <%= label_tag(:search_title, t("backend.search.title")) %>
-      <input type="text" name="search_title" placeholder="<%= t("backend.search.placeholder_title") %>"  value="<%= params[:search_title] %>">
+    <div class="row" id="search_form">
+      <div class="small-12 medium-3 columns">
+        <%= label_tag(:search_title, t("backend.search.title"), class: 'title-s') %>
+        <input type="text" name="search_title" placeholder="<%= t("backend.search.placeholder_title") %>"  value="<%= params[:search_title] %>">
+      </div>
+
+      <div class="small-12 medium-4 columns">
+        <%= label_tag(:search_person, t("backend.search.person"), class: 'title-s') %>
+        <input type="text" name="search_person" placeholder="<%= t("backend.search.placeholder_person") %>"  value="<%= params[:search_person] %>">
+      </div>
+
+      <div class="small-12 medium-5 columns">
+        <%= label_tag :status, t('backend.search.status'), class: 'title-s' %>
+        <%= select_tag :status, event_status_search_options(params[:status]) , {include_blank: 'Selecciona estado' , multiple: true }  %>
+        <%= check_box_tag(:lobby_activity, value = "1", checked = check_filter_lobby_activity , id: "lobby_activity")%>
+        <%= label_tag(:lobby_activity, t("backend.lobby_activity")) %>
+        <input type="submit" class="expanded button tiny radius right" value="<%= t("backend.search.button") %>">
+      </div>
     </div>
-    <div class="small-4 columns">
-      <%= label_tag(:search_person, t("backend.search.person")) %>
-      <input type="text" name="search_person" placeholder="<%= t("backend.search.placeholder_person") %>"  value="<%= params[:search_person] %>">
-    </div>
-    <div class="small-4 columns">
-      <%= label_tag :status, t('backend.search.status'), class: 'title-s' %>
-      <%= select_tag :status, event_status_search_options(params[:status]) , {include_blank: true , multiple: true}  %>
-    </div>
-  </div>
-  <div class="small-12 columns">
-    <div class="small-4 columns left ">
-      <%= link_to t('backend.new_event'), new_event_path, :class => "expanded button tiny radius warning" if can? :create, Event %>
-    </div>
-    <div class="small-4 columns left">
-      <input type="submit" class="expanded button tiny radius" value="<%= t("backend.search.button") %>">
-    </div>
-    <div class="small-1 columns left">
-      <%= check_box_tag(:lobby_activity, value = "1", checked = check_filter_lobby_activity , id: "lobby_activity")%>
-    </div>
-    <div class="small-3 columns left mb40">
-      <%= label_tag(:lobby_activity, t("backend.lobby_activity")) %>
-    </div>
-  </div>
+    <hr />
   <% end %>
 <% else %>
-  <%= link_to t('backend.new_event'), new_event_path, :class => "expanded button tiny radius warning" if can? :create, Event %>
+  <%#= link_to t('backend.new_event'), new_event_path, :class => "expanded button tiny radius warning" if can? :create, Event %>
 <% end %>
-
-
