--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -5,9 +5,7 @@
 </div>
 
 <div class="row">
-
-  <%= render "search_form" %>
-
+  <%= render 'search_form' %>
   <div class="small-12 large-7 large-ofsset-1 columns mb40">
     <% if params[:keyword].present? %>
       <%= render "shared/search_keywords",
