--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -45,6 +45,26 @@
         </section>
       </div>
     </div>
+    <div class="sub_top_bar_box">
+      <div class="row">
+        <div class="small-12 columns">
+          <ul class="inline-list">
+            <li>
+              <%= link_to 'Inicio', root_path %>
+            </li>
+            <li>
+              <%= link_to 'Agendas', root_path %>
+            </li>
+            <li>
+              <%= link_to 'Registro de lobbies', root_path %>
+            </li>
+            <li>
+              <%= link_to 'Huella normativa', nil %>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
 
   <nav class="top-bar show-for-small-only" data-topbar role="navigation">
