--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,16 @@
   <body class="">
     <%= render 'layouts/header' %>
     <%= render  'layouts/admin_messages' %>
+
+    <% if current_page?(controller: 'homepage', action: 'index') %>
+      <div>
+        <div class="header-title">
+          <h1><strong>Transparencia en la Toma de decisiones</strong></h1>
+          <lead>El Ayuntamiento de Madrid abre sus decisiones a la Ciudadanía, consúltalas.</lead>
+        </div>
+      </div>
+    <% end %>
+
     <div id="main-content" class="main-content">
       <div class="row">
         <div class="small-12">
