--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -56,7 +56,7 @@
               <%= link_to 'Agendas', root_path %>
             </li>
             <li>
-              <%= link_to 'Registro de lobbies', root_path %>
+              <%= link_to 'Registro de lobbies', organizations_path %>
             </li>
             <li>
               <%= link_to 'Huella normativa', nil %>
