--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,12 +35,25 @@
         </div>
         <section class="top-bar-section">
           <ul class="right">
-            <li class="btn-public-agenda <%= current_page?(root_path) && 'active' %>">
+
+
+              <li>
+                <%= link_to 'Entrar', root_path %>
+              </li>
+
+              <li>
+                <%= link_to 'Registrarse', root_path, class: "button" %>
+              </li>
+
+
+            <!-- <li class="btn-public-agenda <%= current_page?(root_path) && 'active' %>">
               <%= link_to t('header.btn_public_agenda'), root_path %>
             </li>
+
             <li class="btn-organizations <%= current_page?(organizations_path) && 'active' %>">
               <%= link_to t('header.btn_organizations'), organizations_path %>
-            </li>
+            </li> -->
+
           </ul>
         </section>
       </div>
