Move button sign-in sign-out. Added header-title condition if home page or registration lobbies and show relative text. Added style to registration-lobbies page and added image.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,18 +8,6 @@
         <li><a href="<%= t('header.participation_url') %>" target="_blank"><%= t('header.participation') %></a></li>
         <li><a href="<%= t('header.transparency_url') %>" target="_blank"><%= t('header.transparency') %></a></li>
         <li><a href="<%= t('header.open_data_url') %>" target="_blank"><%= t('header.open_data') %></a></li>
-
-        <% if user_signed_in? %>
-          <li>
-            <%= link_to destroy_user_session_path, method: :delete do %>
-              <%= t("backend.logout")%>
-            <% end %>
-          </li>
-        <% else %>
-          <li>
-            <a href="<%= admin_path %>"><%= t('header.btn_login') %></a>
-          </li>
-        <% end %>
       </ul>
     </div>
   </div>
@@ -34,26 +22,30 @@
           <% end %>
         </div>
         <section class="top-bar-section">
+
           <ul class="right">
 
-
+            <% if user_signed_in? %>
               <li>
-                <%= link_to 'Entrar', root_path %>
+                <%= link_to destroy_user_session_path, method: :delete do %>
+                  <%= t("backend.logout")%>
+                <% end %>
               </li>
-
+            <% else %>
+              <li>
+                <a href="<%= admin_path %>"><%= t('header.btn_login') %></a>
+                <%#= link_to 'Registrarse', root_path, class: "button" %>
+              </li>
               <li>
                 <%= link_to 'Registrarse', root_path, class: "button" %>
               </li>
-
-
+            <% end %>
             <!-- <li class="btn-public-agenda <%= current_page?(root_path) && 'active' %>">
               <%= link_to t('header.btn_public_agenda'), root_path %>
             </li>
-
             <li class="btn-organizations <%= current_page?(organizations_path) && 'active' %>">
               <%= link_to t('header.btn_organizations'), organizations_path %>
             </li> -->
-
           </ul>
         </section>
       </div>
