--- a/app/views/registration_lobbies/index.html.erb
+++ b/app/views/registration_lobbies/index.html.erb
@@ -50,7 +50,7 @@
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </p>
-        <%= link_to 'Acceder', root_path  %>
+        <%= link_to 'Acceder', faq_path  %>
       </div>
     </figure>
   </div>
