--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:body_class) { 'visitors-events' } %>
+
 <div class="row">
   <div class="small-12 columns">
     <%= link_to t('backend.faq.questions'), faq_path, class: 'right' %>
